--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 body {
-    margin: 0;
-    height: 100vh;
-    align-items: center;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     background-color: #2c9fdd;
 }
 
 .card {
     background-color: ghostwhite;
     padding: 1em;
-    max-width: 420px;
-    width: 100%;
     border-radius: 30px;
+    width: 100%;
+    max-width: 420px;
+    margin:1em;
 }
 
